--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="container-fluid p-0">
             <div class="row g-0">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="../assets/img/locations/Taz/1.jpg" title="واجهة المبنى الرئيسي">
+                    <a class="portfolio-box" href="~/assets/img/locations/Taz/1.jpg" title="واجهة المبنى الرئيسي">
                         <img class="img-fluid" src="../assets/img/locations/Taz/1.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <!--<div class="project-category text-white-50">Category</div>-->
