--- a/index.html
+++ b/index.html
@@ -1064,10 +1064,10 @@
         <div class="container px-4 px-lg-5 text-center">
             <h2 class="mb-4">جدول الحفلات</h2>
             <div class="iframe-container">
-                <iframe src="https://mkhalifaaa.github.io/DeothOfCapital.io/Cal.html" width="360" height="350" frameborder="0" scrolling="no"></iframe>
+                <iframe src="https://depthofcapital.github.io/Home/Cal.html" width="360" height="350" frameborder="0" scrolling="no"></iframe>
             </div>
             <div class="iframe-container">
-                <iframe id="my-iframes" src="https://mkhalifaaa.github.io/DeothOfCapital.io/Events.html" width="360" height="350" frameborder="0" scrolling="no"></iframe>
+                <iframe id="my-iframes" src="https://depthofcapital.github.io/Home/Events.html" width="360" height="350" frameborder="0" scrolling="no"></iframe>
             </div>
 
 
