--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
                     <li class="nav-item"><a class="nav-link" href="#about">من نحن</a></li>
                     <li class="nav-item"><a class="nav-link" href="#services">الأماكن</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#portfolio">جدول الحفلات</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#cal">جدول الحفلات</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">تواصل معنا</a></li>
                     <!--<li class="nav-item"><a class="nav-link" href="/indexEn.html">EN</a></li>-->
 
@@ -1060,7 +1060,7 @@
 
 
     <!-- Call to action-->
-    <section class="page-section bg-dark text-white">
+    <section class="page-section bg-dark text-white" id="cal">
         <div class="container px-4 px-lg-5 text-center">
             <h2 class="mb-4">جدول الحفلات</h2>
             <div class="iframe-container">
