--- a/index.html
+++ b/index.html
@@ -988,8 +988,8 @@
         <div class="container-fluid p-0">
             <div class="row g-0">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Shassan/1.jpg" title="صورة للمسجد من الخارج">
-                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Shassan/1.jpg" alt="..." />
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Ref/1.jpg" title="صورة للمسجد من الخارج">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Ref/1.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <!--<div class="project-category text-white-50">Category</div>-->
                             <div class="project-name">المسجد</div>
@@ -997,8 +997,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Shassan/2.jpg" title="صورة لزخارف سقف المدخل الرئيسي">
-                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Shassan/2.jpg" alt="..." />
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Ref/2.jpg" title="صورة لزخارف سقف المسجد">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Ref/2.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <!--<div class="project-category text-white-50">Category</div>-->
                             <div class="project-name">الاسقف</div>
@@ -1006,17 +1006,17 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Shassan/3.jpg" title="فوارة المسجد وكانت تستخدم كمكان للوضوء">
-                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Shassan/3.jpg" alt="..." />
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Ref/3.jpg" title="قبر شاة ايران داخل المسجد">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Ref/3.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <!--<div class="project-category text-white-50">Category</div>-->
-                            <div class="project-name">الفوارة</div>
+                            <div class="project-name">الأضرحة</div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Shassan/4.jpg" title="صورة تظهرساحة المسجد من احد لأواوِين الاربعة ">
-                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Shassan/4.jpg" alt="..." />
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Ref/4.jpg" title="صورة تظهر ابداع الاعمار و الانارة المستخدمة بالمسجد ">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Ref/4.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <!--<div class="project-category text-white-50">Category</div>-->
                             <div class="project-name">المسجد من الداخل</div>
@@ -1024,20 +1024,20 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Shassan/5.jpg" title="صورة لمحراب و منبر المسجد">
-                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Shassan/5.jpg" alt="..." />
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Ref/5.jpg" title="صورة لزخارف القبب بالمسجد">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Ref/5.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <!--<div class="project-category text-white-50">Category</div>-->
-                            <div class="project-name">المحراب</div>
+                            <div class="project-name">الزخارف</div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Shassan/6.jpg" title="صورة لأحدى زخارف الحوائط بالمسجد">
-                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Shassan/6.jpg" alt="..." />
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Ref/6.jpg" title="مقبرة شويكار هانم">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Reg/6.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <!--<div class="project-category text-white-50">Category</div>-->
-                            <div class="project-name">الزخارف</div>
+                            <div class="project-name">مقابر الملوك</div>
                         </div>
                     </a>
                 </div>
