--- a/index.html
+++ b/index.html
@@ -1051,6 +1051,108 @@
 
 
 
+    <section class="page-section" id="services">
+        <div class="container px-4 px-lg-5">
+            <h2 class="text-center mt-0">مجموعة السلطان الظاهر برقوق</h2>
+            <hr class="divider" />
+            <div class="row gx-4 gx-lg-5">
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi bi-pin-map fs-1 text-primary"></i></div>
+                        <h3 class="h4 mb-2">الموقع</h3>
+                        <p class="text-muted mb-0">
+                            يقع في منطقة الجمالية بالقاهرة القديمة
+                        </p>
+                        <p class="text-muted mb-0"><a href="https://goo.gl/maps/X3zLHWKC5uDfemAaA?coh=178572&entry=tt">من هنا</a></p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi bi-clock-history fs-1 text-primary"></i></div>
+                        <h3 class="h4 mb-2">تاريخ المكان</h3>
+                        <p class="text-muted mb-0">
+                              مجموعة برقوق هي مجموعة معمارية أثرية شهيرة في القاهرة ، مبنية على الطراز الإسلامي المملوكي. تضم المجموعة مسجدًا ومدرسة وخنقة وقبة ضريح. أمر بتأسيسها من قبل السلطان الظاهر سيف الدين برقوق مؤسس الدولة المملوكية الثانية (الجركسية أو البرجية) بإشراف الأمير جركس الخليلي، خلال الفترة من 786 هـ. / 1384 م إلى 788 هـ / 1386 م. وتعتبر المجموعة ومرفقاتها أول منشأة معمارية يتم بناؤها في عهد المماليك الشركس ، وفي موقعها فندق معروف باسم زكاة خان
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi bi-ticket fs-1 text-primary"></i></div>
+                        <h3 class="h4 mb-2">الأسعار و المواعيد</h3>
+                        <p class="text-muted mb-0">من 9 ص حتى 5 م<br />20 ج.م للكبار و 10 ج.م للطلاب</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- Portfolio-->
+    <div id="portfolio">
+        <div class="container-fluid p-0">
+            <div class="row g-0">
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Bar/1.jpg" title="صورة للمسجد من الخارج">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Bar/1.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">المسجد</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Bar/2.jpg" title="صورة لقبلة و منبر المسجد">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Bar/2.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">الاسقف</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Bar/3.jpg" title="زخارف و انارة اسقف المسجد">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Bar/3.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">السقف</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Bar/4.jpg" title="صورة تظهر ابداع الإنارة المستحدمة في المسجد ">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Bar/4.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">الإنارة</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Bar/5.jpg" title="صورة لزخارف حوائط و اسقف المسجد">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Bar/5.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">الزخارف</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Bar/6.jpg" title="صورة للمسجد من الداخل">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Bar/6.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">المسجد من الداخل</div>
+                        </div>
+                    </a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+
+
+
+
 
 
 
