--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Ref/6.jpg" title="مقبرة شويكار هانم">
-                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Reg/6.jpg" alt="..." />
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Ref/6.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <!--<div class="project-category text-white-50">Category</div>-->
                             <div class="project-name">مقابر الملوك</div>
@@ -1104,7 +1104,7 @@
                         <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Bar/2.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <!--<div class="project-category text-white-50">Category</div>-->
-                            <div class="project-name">الاسقف</div>
+                            <div class="project-name">القبلة</div>
                         </div>
                     </a>
                 </div>
