--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="text-white mt-0">يتركز المشروع علي التعريف بأماكن تراثية وتاريخية مشهورة غير الحضارةالفرعونية</h2>
+                    <h2 class="text-white mt-0"> يتناول هذا المشروع تعريف أماكن تراثية وتاريخية مشهورة غير الحضارة الفرعونية </h2>
                     <hr class="divider divider-light" />
-                    <p class="text-white-75 mb-4">يوجد الكثير من الأماكن التراثية في قلب الفاهرة و الجيزة, يعود تاريخها لمئات السنين, حيث يمكنك التمتع بالفرجة علي حضارة معمارية عريقة, او الاستمتاع بحفلات ليلية في هذة الاماكن, بالإضافة الى اماكن اخري لتسوق مشغولات يدوية تصنع بمهارة عالية </p>
+                    <p class="text-white-75 mb-4">‎يوجد الكثير من الأماكن التراثية في قلب القاهره و الجيزة, يعود تاريخها لمئات السنين, حيث يمكنك التمتع بمشاهده حضارات معمارية عريقة, او الاستمتاع بحفلات ليلية في هذة الاماكن, بالإضافة الى اماكن اخري لتسوق وتعليم مشغولات يدوية تصنع بمهارة عالية</p>
                     <a class="btn btn-light btn-xl" href="#services">هيا بنا!</a>
                 </div>
             </div>
@@ -1071,7 +1071,7 @@
                         <div class="mb-2"><i class="bi bi-clock-history fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">تاريخ المكان</h3>
                         <p class="text-muted mb-0">
-                              مجموعة برقوق هي مجموعة معمارية أثرية شهيرة في القاهرة ، مبنية على الطراز الإسلامي المملوكي. تضم المجموعة مسجدًا ومدرسة وخنقة وقبة ضريح. أمر بتأسيسها من قبل السلطان الظاهر سيف الدين برقوق مؤسس الدولة المملوكية الثانية (الجركسية أو البرجية) بإشراف الأمير جركس الخليلي، خلال الفترة من 786 هـ. / 1384 م إلى 788 هـ / 1386 م. وتعتبر المجموعة ومرفقاتها أول منشأة معمارية يتم بناؤها في عهد المماليك الشركس ، وفي موقعها فندق معروف باسم زكاة خان
+                            مجموعة برقوق هي مجموعة معمارية أثرية شهيرة في القاهرة ، مبنية على الطراز الإسلامي المملوكي. تضم المجموعة مسجدًا ومدرسة وخنقة وقبة ضريح. أمر بتأسيسها من قبل السلطان الظاهر سيف الدين برقوق مؤسس الدولة المملوكية الثانية (الجركسية أو البرجية) بإشراف الأمير جركس الخليلي، خلال الفترة من 786 هـ. / 1384 م إلى 788 هـ / 1386 م. وتعتبر المجموعة ومرفقاتها أول منشأة معمارية يتم بناؤها في عهد المماليك الشركس ، وفي موقعها فندق معروف باسم زكاة خان
                         </p>
                     </div>
                 </div>
@@ -1150,6 +1150,109 @@
     </div>
 
 
+
+
+
+
+
+
+    <section class="page-section" id="services">
+        <div class="container px-4 px-lg-5">
+            <h2 class="text-center mt-0">مسجد الأقمر</h2>
+            <hr class="divider" />
+            <div class="row gx-4 gx-lg-5">
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi bi-pin-map fs-1 text-primary"></i></div>
+                        <h3 class="h4 mb-2">الموقع</h3>
+                        <p class="text-muted mb-0">
+                            يقع في  منطقة الجمالية بالقاهرة القديمة
+                        </p>
+                        <p class="text-muted mb-0"><a href="https://goo.gl/maps/SKoGqdUUDXiQEDb8A?coh=178572&entry=tt">من هنا</a></p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi bi-clock-history fs-1 text-primary"></i></div>
+                        <h3 class="h4 mb-2">تاريخ المكان</h3>
+                        <p class="text-muted mb-0">
+                            أحد مساجد القاهرة الفاطمية. بناه الوزير المأمون بن البتيحي بأمر من الخليفة الأمير حكم الله أبي علي منصور سنة 519 هـ (1125 م). وهو أول مسجد في القاهرة واجهته ذات تصميم هندسي خاص. ويروي المقريزي أن المسجد أقيم في مكان أحد الأديرة، والذي كان يسمى بئر العظمة لاحتوائه على عظام بعض الشهداء الأقباط. أطلق على المسجد هذا الاسم بسبب لون أحجاره البيضاء التي تشبه لون القمر
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi bi-ticket fs-1 text-primary"></i></div>
+                        <h3 class="h4 mb-2">الأسعار و المواعيد</h3>
+                        <p class="text-muted mb-0">من 8 ص حتى 4 م<br />10 ج.م للكبار و 5 ج.م للطلاب</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- Portfolio-->
+    <div id="portfolio">
+        <div class="container-fluid p-0">
+            <div class="row g-0">
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Aqmr/1.jpg" title="صورة للمسجد من الخارج">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Aqmr/1.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">المسجد</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Aqmr/2.jpg" title="صورة لزخارف فوق بوابة المسجد">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Aqmr/2.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">الزخارف</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Aqmr/3.jpg" title="زخارف أعمدة المسجد">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Aqmr/3.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">الأعمد</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Aqmr/4.jpg" title="صورة تظهر تصميم بهو المسجد من الداخل ">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Aqmr/4.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">المسجد من الداخل</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Aqmr/5.jpg" title="تصميم البوابة الخشبية الرئيسية للمسجد">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Aqmr/5.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">البوابة</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Aqmr/6.jpg" title="قبلة المسجد و النقوش المحفورة للايات القراّنية بها">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Aqmr/6.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">القبلة</div>
+                        </div>
+                    </a>
+                </div>
+
+            </div>
+        </div>
+    </div>
 
 
 
