--- a/index.html
+++ b/index.html
@@ -1218,7 +1218,7 @@
                         <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Aqmr/3.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <!--<div class="project-category text-white-50">Category</div>-->
-                            <div class="project-name">الأعمد</div>
+                            <div class="project-name">الأعمدة</div>
                         </div>
                     </a>
                 </div>
@@ -1253,6 +1253,119 @@
             </div>
         </div>
     </div>
+
+
+
+
+
+
+
+
+    <section class="page-section" id="services">
+        <div class="container px-4 px-lg-5">
+            <h2 class="text-center mt-0">مسجد الحاكم بأمر الله</h2>
+            <hr class="divider" />
+            <div class="row gx-4 gx-lg-5">
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi bi-pin-map fs-1 text-primary"></i></div>
+                        <h3 class="h4 mb-2">الموقع</h3>
+                        <p class="text-muted mb-0">
+                            يقع في  منطقة الجمالية بالقاهرة القديمة
+                        </p>
+                        <p class="text-muted mb-0"><a href="https://goo.gl/maps/962HH12vJpajXd2X8?coh=178572&entry=tt">من هنا</a></p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi bi-clock-history fs-1 text-primary"></i></div>
+                        <h3 class="h4 mb-2">تاريخ المكان</h3>
+                        <p class="text-muted mb-0">
+
+                            كان المسجد وقت بنائه خارج أسوار القاهرة القديمة الذي بناه جوهر الصقلي، ثم أصبح ضمن حدود المدينة بعد أن وسع بدر الجمالي (480 هـ / 1087 م) المدينة وشيدها. 
+                            يمثل المدخل الرئيسي البارز في الواجهة الغربية أقدم الأمثلة على المداخل البارزة في مصر، وكان مركزًا لتعليم العقيدة الشيعية.
+                            أما تصميم المسجد فهو مستطيل الشكل، ويتكون من صحن متوسط مكشوف محاط بأربعة أروقة تعلوه مئذنتان. 
+                            للمسجد تاريخ مثير للاهتمام حيث استخدمته الحملة الفرنسية كمقر لجنودها واستخدمت مئذنتيها كأبراج مراقبة. و استخدم رواق القبلة كأول متحف إسلامي في القاهرة. 
+
+
+                        </p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi bi-ticket fs-1 text-primary"></i></div>
+                        <h3 class="h4 mb-2">الأسعار و المواعيد</h3>
+                        <p class="text-muted mb-0">من 9 ص حتى 5 م<br />دخول مجاني </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- Portfolio-->
+    <div id="portfolio">
+        <div class="container-fluid p-0">
+            <div class="row g-0">
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Hkm/1.jpg" title="صورة لأحدى مداخل المسجد من الخارج">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Hkm/1.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">بوابة المسجد</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Hkm/2.jpg" title="صورة لساحة المسجد ليلاً">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Hkm/2.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">الساحة</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Hkm/3.jpg" title="صورة للعقود المزينة بستائر زرقاء يتوسطها ثرية المسجد">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Hkm/3.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">العقود</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Hkm/4.jpg" title="ساحة المسجد من الأعلى">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Hkm/4.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">ساحة المسجد</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Hkm/5.jpg" title="صورة تظهر تصميم نفورة المياة بساحة المسجد ">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Hkm/5.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">نافورة ساحة المسجد</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Hkm/6.jpg" title="صورة لأحدى مئذنتى المسجد تعلو العقود المطلة علي الساحة ">
+                        <img class="img-fluid" src="https://raw.githubusercontent.com/DepthofCapital/Home/main/assets/img/Locations/Hkm/6.jpg" alt="..." />
+                        <div class="portfolio-box-caption">
+                            <!--<div class="project-category text-white-50">Category</div>-->
+                            <div class="project-name">المأذنة</div>
+                        </div>
+                    </a>
+                </div>
+               
+
+            </div>
+        </div>
+    </div>
+
 
 
 
