--- a/index.html
+++ b/index.html
@@ -1282,10 +1282,10 @@
                         <h3 class="h4 mb-2">تاريخ المكان</h3>
                         <p class="text-muted mb-0">
 
-                            كان المسجد وقت بنائه خارج أسوار القاهرة القديمة الذي بناه جوهر الصقلي، ثم أصبح ضمن حدود المدينة بعد أن وسع بدر الجمالي (480 هـ / 1087 م) المدينة وشيدها. 
+                            
                             يمثل المدخل الرئيسي البارز في الواجهة الغربية أقدم الأمثلة على المداخل البارزة في مصر، وكان مركزًا لتعليم العقيدة الشيعية.
                             أما تصميم المسجد فهو مستطيل الشكل، ويتكون من صحن متوسط مكشوف محاط بأربعة أروقة تعلوه مئذنتان. 
-                            للمسجد تاريخ مثير للاهتمام حيث استخدمته الحملة الفرنسية كمقر لجنودها واستخدمت مئذنتيها كأبراج مراقبة. و استخدم رواق القبلة كأول متحف إسلامي في القاهرة. 
+                            للمسجد تاريخ مثير للاهتمام حيث استخدمته الحملة الفرنسية كمقر لجنودها واستخدمت مئذنتيها كأبراج مراقبة.
 
 
                         </p>
